[gd_scene load_steps=23 format=3 uid="uid://t2l6p3qd6bng"]

[ext_resource type="Texture2D" uid="uid://dw1yahhrg2oip" path="res://Assets/Art/spriteSheet.png" id="1_a22ab"]
[ext_resource type="Script" path="res://scripts/level.gd" id="1_nb1fb"]
[ext_resource type="Script" path="res://scripts/paddle.gd" id="1_o6mqf"]
[ext_resource type="Texture2D" uid="uid://bi8a3yd6086xq" path="res://Assets/Art/bricks.png" id="2_gdwgy"]
[ext_resource type="PackedScene" uid="uid://dh16ftr5kdhw7" path="res://player.tscn" id="2_xmnpl"]
[ext_resource type="Script" path="res://scripts/PongBall.gd" id="4_iwj5o"]
[ext_resource type="Texture2D" uid="uid://cumumvjqtw6o4" path="res://Assets/Art/floor.png" id="6_c4t07"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jde7"]
size = Vector2(21, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3icu"]
size = Vector2(21, 145.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4j1k"]
size = Vector2(984, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sk4k6"]
size = Vector2(50, 634)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojvuw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_omsau"]
atlas = ExtResource("1_a22ab")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqq80"]
atlas = ExtResource("1_a22ab")
region = Rect2(16, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n65se"]
atlas = ExtResource("1_a22ab")
region = Rect2(0, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhyux"]
atlas = ExtResource("1_a22ab")
region = Rect2(16, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi3j4"]
atlas = ExtResource("1_a22ab")
region = Rect2(0, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecs7b"]
atlas = ExtResource("1_a22ab")
region = Rect2(16, 144, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_o1b4w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omsau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqq80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n65se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhyux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi3j4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecs7b")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3owwn"]
size = Vector2(1096, 20)

[sub_resource type="SystemFont" id="SystemFont_aeg3y"]
font_names = PackedStringArray("Comic Sans MS")

[sub_resource type="Theme" id="Theme_vo2u3"]
default_font = SubResource("SystemFont_aeg3y")

[node name="Level" type="Node2D"]
script = ExtResource("1_nb1fb")

[node name="bg" type="Node2D" parent="."]
scale = Vector2(2, 2)

[node name="Sprite2D13" type="TextureRect" parent="bg"]
offset_left = -13.0
offset_top = -21.0
offset_right = 232.0
offset_bottom = 124.0
scale = Vector2(2, 2)
texture = ExtResource("2_gdwgy")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="bg"]
offset_left = -26.0
offset_top = -26.0
offset_right = 513.0
offset_bottom = 288.0
color = Color(0, 0, 0, 0.662745)

[node name="Sprite2D" type="Sprite2D" parent="bg"]
position = Vector2(223.5, 20.5)
rotation = 1.5708
texture = ExtResource("1_a22ab")
hframes = 16
vframes = 12
frame = 5

[node name="Sprite2D2" type="Sprite2D" parent="bg"]
position = Vector2(223.5, 36.5)
rotation = 1.5708
texture = ExtResource("1_a22ab")
hframes = 16
vframes = 12
frame = 7

[node name="Sprite2D3" type="Sprite2D" parent="bg"]
position = Vector2(223.5, 76.5)
rotation = 1.5708
texture = ExtResource("1_a22ab")
hframes = 16
vframes = 12
frame = 5

[node name="Sprite2D4" type="Sprite2D" parent="bg"]
position = Vector2(223.5, 92.5)
rotation = 1.5708
texture = ExtResource("1_a22ab")
hframes = 16
vframes = 12
frame = 7

[node name="Sprite2D5" type="Sprite2D" parent="bg"]
position = Vector2(223.5, 132.5)
rotation = 1.5708
texture = ExtResource("1_a22ab")
hframes = 16
vframes = 12
frame = 5

[node name="Sprite2D6" type="Sprite2D" parent="bg"]
position = Vector2(223.5, 148.5)
rotation = 1.5708
texture = ExtResource("1_a22ab")
hframes = 16
vframes = 12
frame = 7

[node name="Sprite2D7" type="Sprite2D" parent="bg"]
position = Vector2(223.5, 188.5)
rotation = 1.5708
texture = ExtResource("1_a22ab")
hframes = 16
vframes = 12
frame = 5

[node name="Sprite2D8" type="Sprite2D" parent="bg"]
position = Vector2(223.5, 204.5)
rotation = 1.5708
texture = ExtResource("1_a22ab")
hframes = 16
vframes = 12
frame = 7

[node name="leftPaddle" type="Area2D" parent="."]
position = Vector2(0, 10)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_o6mqf")

[node name="top2" type="Sprite2D" parent="leftPaddle"]
position = Vector2(0, 24)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("1_a22ab")
hframes = 16
vframes = 12
frame = 2

[node name="mid" type="Sprite2D" parent="leftPaddle"]
position = Vector2(0, 72)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("1_a22ab")
hframes = 16
vframes = 12
frame = 3

[node name="bottom" type="Sprite2D" parent="leftPaddle"]
position = Vector2(0, 120)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("1_a22ab")
hframes = 16
vframes = 12
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftPaddle"]
position = Vector2(13, 72)
shape = SubResource("RectangleShape2D_1jde7")

[node name="rightPaddle" type="Area2D" parent="."]
position = Vector2(948, 180)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_o6mqf")

[node name="top2" type="Sprite2D" parent="rightPaddle"]
position = Vector2(0, 24)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("1_a22ab")
flip_v = true
hframes = 16
vframes = 12
frame = 2

[node name="mid" type="Sprite2D" parent="rightPaddle"]
position = Vector2(0, 72)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("1_a22ab")
flip_v = true
hframes = 16
vframes = 12
frame = 3

[node name="bottom" type="Sprite2D" parent="rightPaddle"]
position = Vector2(0, 120)
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("1_a22ab")
flip_v = true
hframes = 16
vframes = 12
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightPaddle"]
position = Vector2(-13, 72.25)
shape = SubResource("RectangleShape2D_i3icu")

[node name="player" parent="." instance=ExtResource("2_xmnpl")]
position = Vector2(453, 447)

[node name="floor" type="Area2D" parent="."]
position = Vector2(482, 509)
collision_layer = 2
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
shape = SubResource("RectangleShape2D_i4j1k")

[node name="top" type="Area2D" parent="."]
position = Vector2(480, -30)
collision_layer = 2
collision_mask = 2
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="top"]
offset_left = -485.0
offset_top = -2.0
offset_right = 31.0
offset_bottom = 14.0
scale = Vector2(2, 2)
texture = ExtResource("6_c4t07")
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="top"]
shape = SubResource("RectangleShape2D_i4j1k")

[node name="wall-L" type="Area2D" parent="."]
position = Vector2(-25, 270)
collision_layer = 2
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall-L"]
shape = SubResource("RectangleShape2D_sk4k6")

[node name="wall-R" type="Area2D" parent="."]
position = Vector2(980, 270)
collision_layer = 2
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall-R"]
shape = SubResource("RectangleShape2D_sk4k6")

[node name="PongBall" type="CharacterBody2D" parent="."]
position = Vector2(478, 234)
collision_layer = 2
collision_mask = 2
script = ExtResource("4_iwj5o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PongBall"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_ojvuw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PongBall"]
position = Vector2(-1.86265e-05, 2.38419e-07)
scale = Vector2(3.75, 3.75)
sprite_frames = SubResource("SpriteFrames_o1b4w")
autoplay = "default"
frame_progress = 0.551624

[node name="playerFloor" type="StaticBody2D" parent="."]
position = Vector2(463, 488)
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="playerFloor"]
offset_left = -485.0
offset_top = -10.0
offset_right = 31.0
offset_bottom = 6.0
scale = Vector2(2, 2)
texture = ExtResource("6_c4t07")
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerFloor"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_3owwn")

[node name="score-L" type="RichTextLabel" parent="."]
offset_left = 380.0
offset_top = 20.0
offset_right = 460.0
offset_bottom = 100.0
theme = SubResource("Theme_vo2u3")
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_font_sizes/normal_font_size = 48
text = "0"

[node name="score-R" type="RichTextLabel" parent="."]
offset_left = 500.0
offset_top = 20.0
offset_right = 580.0
offset_bottom = 100.0
theme = SubResource("Theme_vo2u3")
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_font_sizes/normal_font_size = 48
text = "0"

[connection signal="body_entered" from="leftPaddle" to="." method="_on_left_paddle_body_entered"]
[connection signal="body_entered" from="rightPaddle" to="." method="_on_right_paddle_body_entered"]
[connection signal="body_entered" from="floor" to="." method="_on_floor_body_entered"]
[connection signal="body_entered" from="top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="wall-L" to="." method="_on_wall_l_body_entered"]
[connection signal="body_entered" from="wall-R" to="." method="_on_wall_r_body_entered"]
